Display hide columns from preferences

--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -50,20 +50,10 @@
                 </child>
                 <child>
                   <object class="AdwPreferencesGroup">
-                    <property name="title">List</property>
+                    <property name="title">Units List</property>
                     <child>
                       <object class="AdwExpanderRow" id="unit_list_columns">
                         <property name="title">Columns</property>
-                        <child>
-                          <object class="AdwSwitchRow">
-                            <property name="title">dessf</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="AdwSwitchRow">
-                            <property name="title">sub</property>
-                          </object>
-                        </child>
                       </object>
                     </child>
                   </object>
