--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -50,7 +50,13 @@
                 </child>
                 <child>
                   <object class="AdwPreferencesGroup">
-                    <property name="title">Units List</property>
+                    <property name="title">Unit List</property>
+                    <child>
+                      <object class="AdwSwitchRow" id="unit_list_colors">
+                        <property name="subtitle">Display colors on unit list table cells, according to their content.</property>
+                        <property name="title">Display colors</property>
+                      </object>
+                    </child>
                     <child>
                       <object class="AdwExpanderRow" id="unit_list_columns">
                         <property name="title">Columns</property>
