change pango attributes to css classe seems to solve core dumb and make code more simple

--- a/data/styles/base.css
+++ b/data/styles/base.css
@@ -22,3 +22,7 @@ textview {
     font-family: 'Fira Code', 'Droid Sans Mono', monospace;
     font-size: 16px;
 }
+
+.bold {
+    font-weight: bold;
+}
