--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -59,7 +59,7 @@
                     </child>
                     <child>
                       <object class="AdwExpanderRow" id="unit_list_columns">
-                        <property name="title">Columns</property>
+                        <property name="title">Columns Display Parameters</property>
                       </object>
                     </child>
                   </object>
