--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -18,7 +18,7 @@
               <object class="AdwPreferencesPage">
                 <child>
                   <object class="AdwPreferencesGroup">
-                    <property name="title">Configuration properties</property>
+                    <property name="title">General</property>
                     <child>
                       <object class="AdwComboRow" id="timestamp_style">
                         <property name="subtitle"> Change the format of printed timestamps</property>
@@ -27,6 +27,7 @@
                     </child>
                     <child>
                       <object class="AdwActionRow" id="select_font_row">
+                        <property name="subtitle">The Monospace Font</property>
                         <property name="title">Text font</property>
                         <property name="valign">baseline</property>
                         <child>
