--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -20,6 +20,17 @@
                   <object class="AdwPreferencesGroup">
                     <property name="title">General</property>
                     <child>
+                      <object class="AdwComboRow" id="prefered_color_scheme">
+                        <property name="title">Prefered Color Scheme</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwComboRow" id="app_orientation">
+                        <property name="subtitle">Application division orientation mode</property>
+                        <property name="title">Orientation</property>
+                      </object>
+                    </child>
+                    <child>
                       <object class="AdwComboRow" id="timestamp_style">
                         <property name="subtitle"> Change the format of printed timestamps</property>
                         <property name="title">Timestamp style</property>
@@ -45,11 +56,6 @@
                             <signal name="clicked" handler="select_font_clicked" swapped="yes"/>
                           </object>
                         </child>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="AdwComboRow" id="prefered_color_scheme">
-                        <property name="title">Prefered Color Scheme</property>
                       </object>
                     </child>
                   </object>
